# android-rs-glue

cargo-apk/: Cargo.toml  linker.rs
cargo-apk/src/: build.rs  config.rs  main.rs
